# hugging4all

./: pyproject.toml
data/huggingface_docs_chroma/: chroma-collections.parquet  chroma-embeddings.parquet
data/huggingface_docs_chroma/index/: id_to_uuid_e31ba9fe-10e4-4ee2-bbb7-ac648c230380.pkl  index_metadata_e31ba9fe-10e4-4ee2-bbb7-ac648c230380.pkl  uuid_to_id_e31ba9fe-10e4-4ee2-bbb7-ac648c230380.pkl
hugging4all/data/: docs_en_2023_06_12.jsonl  docs_en_2023_06_14.jsonl  docs_en_2023_06_17.jsonl
hugging4all/text_retriever/: README.md  config.yaml  text_retriever.py  utils.py
huggingface_docs_chroma/: chroma-embeddings.parquet
huggingface_docs_chroma/index/: id_to_uuid_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  index_metadata_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  uuid_to_id_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl
